# solception

./: Cargo.toml  Dockerfile  README.md
src/: lib.rs  main.rs
src/adapters/controllers/: mod.rs  provenance.rs
src/adapters/gateways/: mod.rs
src/adapters/gateways/solana/: interface.rs  mod.rs
src/adapters/gateways/telemetry/: interface.rs  mod.rs
src/adapters/presenters/: mod.rs  provenance_to_cli.rs
src/use_cases/: mod.rs  program_data_provenance.rs  solana_queries.rs
tests/: entrypoint_behavior.rs
